change media screen 990 to 992

--- a/assets/collapsible-content.css
+++ b/assets/collapsible-content.css
@@ -119,7 +119,7 @@
     }
   }
 
-  @media screen and (min-width: 990px) {
+  @media screen and () {
     .collapsible-content__grid:not(.collapsible-content__grid--reverse) .grid__item:last-child,
     .collapsible-content__grid--reverse .collapsible-content__grid-item {
       padding-left: 7rem;
