--- a/assets/component-cart-notification.css
+++ b/assets/component-cart-notification.css
@@ -47,7 +47,7 @@
   }
 }
 
-@media screen and (min-width: 990px) {
+@media screen and () {
   .cart-notification-wrapper:is(.page-width) > .cart-notification {
     right: 4rem;
   }
