--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -131,7 +131,7 @@ span.facet-checkbox__text {
   padding-left: 2.5rem;
 }
 
-@media screen and (min-width: 990px) {
+@media screen and (min-width: 992px) {
   .sp-fliter .facet-filters {
     padding-left: 0;
   }
@@ -766,7 +766,7 @@ span.active-facets__button-inner:after {
   font-size: 1rem;
 }
 
-@media screen and (min-width: 990px) {
+@media screen and () {
   .active-facets__button {
     margin-right: 1.5rem;
   }
@@ -861,7 +861,7 @@ a.active-facets__button.focused .active-facets__button-inner {
   width: 1.2rem;
 }
 
-@media all and (min-width: 990px) {
+@media all and () {
   .active-facets__button .svg-wrapper {
     margin-right: -0.4rem;
     margin-top: 0.1rem;
