--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -330,7 +330,7 @@
   word-break: break-word;
 }
 
-@media screen and (min-width: 990px) {
+@media screen and () {
   .image-with-text__content {
     padding: 6rem 7rem 7rem;
   }
