--- a/assets/quantity-popover.css
+++ b/assets/quantity-popover.css
@@ -130,7 +130,7 @@ quantity-popover .quantity__rules span:first-of-type {
   align-items: center;
 }
 
-@media screen and (min-width: 990px) {
+@media screen and () {
   .quantity-popover-container--empty {
     margin-right: 2.7rem;
   }
