--- a/assets/section-featured-product.css
+++ b/assets/section-featured-product.css
@@ -54,7 +54,7 @@
   }
 }
 
-@media screen and (min-width: 990px) {
+@media screen and () {
   .background-secondary .featured-product:not(.product--no-media) > .product__info-wrapper {
     padding: 0 0 0 5rem;
   }
