--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -226,7 +226,7 @@
   white-space: nowrap;
 }
 
-@media screen and (min-width: 990px) {
+@media screen and () {
   .multicolumn-list__item--empty {
     display: list-item;
   }
