--- a/assets/customer.css
+++ b/assets/customer.css
@@ -499,7 +499,7 @@ h2.form__message {
   margin-bottom: 7rem;
 }
 
-@media screen and (min-width: 990px) {
+@media screen and () {
   .customer .pagination {
     margin-top: 7rem;
     margin-bottom: 10rem;
@@ -641,14 +641,14 @@ h2.form__message {
   }
 }
 
-@media screen and (min-width: 990px) {
+@media screen and () {
   :is(.account, .order) > div:nth-of-type(2) {
     display: flex;
     margin-top: 5rem;
   }
 }
 
-@media screen and (min-width: 990px) {
+@media screen and () {
   :is(.account, .order) > div:nth-of-type(2) > div:first-of-type {
     flex-grow: 1;
     padding-right: 3.2rem;
@@ -679,7 +679,7 @@ h2.form__message {
   margin-bottom: 1rem;
 }
 
-@media screen and (min-width: 990px) {
+@media screen and () {
   :is(.account, .order) h2 {
     margin-top: 0;
   }
