--- a/assets/section-blog-post.css
+++ b/assets/section-blog-post.css
@@ -49,7 +49,7 @@
   }
 }
 
-@media screen and (min-width: 990px) {
+@media screen and () {
   .article-template__hero-small {
     height: 27.5rem;
   }
@@ -174,7 +174,7 @@
   margin: 2rem 0 2.5rem;
 }
 
-@media screen and (min-width: 990px) {
+@media screen and () {
   .article-template__comments .pagination-wrapper {
     margin: 5rem 0 8rem;
   }
