--- a/assets/section-featured-blog.css
+++ b/assets/section-featured-blog.css
@@ -2,7 +2,7 @@
   height: 100%;
 }
 
-@media screen and (min-width: 990px) {
+@media screen and () {
   .grid--1-col-desktop .article-card .card__content {
     text-align: center;
   }
@@ -16,7 +16,7 @@
   margin-bottom: 1rem;
 }
 
-@media screen and (min-width: 990px) {
+@media screen and () {
   .blog__posts.articles-wrapper {
     margin-bottom: 0;
   }
