--- a/assets/section-main-blog.css
+++ b/assets/section-main-blog.css
@@ -43,7 +43,7 @@
   }
 }
 
-@media screen and (min-width: 990px) {
+@media screen and () {
   .blog-articles--collage > *:nth-child(3n + 1) .article-card__image--small .ratio .ratio::before,
   .blog-articles--collage > *:nth-child(3n + 2):last-child .article-card__image--small .ratio .ratio::before {
     padding-bottom: 27.5rem;
