--- a/snippets/collection-list.liquid
+++ b/snippets/collection-list.liquid
@@ -113,18 +113,9 @@
 
     .collection-list {
         display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        gap: 2rem;
     }
 
-    .swiper_collection .collection-list {
-        display: flex !important;
-        gap: 0 !important;
-    }
-   .swiper_collection {
-      position: relative;
-        overflow: hidden;
-    }
+
     .collection-card {
         border-radius: 8px;
     }
@@ -156,39 +147,52 @@
         font-size: 1.6rem;
     }
 
-    .swiper-button-prev,
-    .swiper-button-next {
-        color: #fff;
-        background: #000;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        z-index: 10;
-        border-radius: 50%;
-        width: 44px;
-        height: 44px;
-    }
-    .swiper-button-prev:after,
-    .swiper-button-next:after {
-       font-size: 20px;
-    }
-    .swiper-button-prev {
-        left: 0;
-    }
 
-    .swiper-button-next {
-        right: 0;
-    }
     .collection-list {
                     display: grid;
                      }
     @media screen and (min-width: 992px){
+    .swiper_collection .collection-list {
+            display: flex !important;
+            gap: 0 !important;
+        }
+       .swiper_collection {
+          position: relative;
+            overflow: hidden;
+        }
+        .swiper-button-prev,
+        .swiper-button-next {
+                color: #fff;
+                background: #000;
+                position: absolute;
+                top: 50%;
+                transform: translateY(-50%);
+                z-index: 10;
+                border-radius: 50%;
+                width: 44px;
+                height: 44px;
+            }
+            .swiper-button-prev:after,
+            .swiper-button-next:after {
+               font-size: 20px;
+            }
+            .swiper-button-prev {
+                left: 0;
+            }
+
+            .swiper-button-next {
+                right: 0;
+            }
     .collection-list {
                 grid-template-columns: repeat(5, 1fr);
                 gap: 2rem;
             }
     }
      @media screen and (max-width: 992px){
+     .swiper-button-prev,
+     .swiper-button-next {
+             display: none;
+             }
         .collection-list {
                     grid-template-columns: repeat(3, 1fr);
                     gap: 1rem;
